Finished best-fit and worst-fit